--- a/package.json
+++ b/package.json
@@ -80,8 +80,8 @@
     "lint-staged": "^11.0.0",
     "minimist": "^1.2.5",
     "nan": "^2.15.0",
-    "node-abi": "^2.19.3",
-    "node-gyp": "^7.1.2",
+    "node-abi": "^3.33.0",
+    "node-gyp": "^9.3.1",
     "prebuild": "^10.0.1",
     "prettier": "^2.3.1",
     "robotjs": "^0.6.0",
@@ -178,6 +178,16 @@
       "node",
       "16.0.0",
       "93"
+    ], 
+    [
+      "node", 
+      "18.13.0",
+      "108"
+    ], 
+    [
+      "electron", 
+      "22.0.0", 
+      "110"
     ]
   ]
 }
